[metadata]
name = pipewatch
version = 0.1.0
description = A lightweight CLI tool for monitoring and alerting on data pipeline health metrics.
long_description = file: README.md
long_description_content_type = text/markdown
author = pipewatch contributors
license = MIT
python_requires = >=3.11

[options]
packages = find:
install_requires =
    pyyaml>=6.0
    pydantic>=2.0
    requests>=2.28

[options.entry_points]
console_scripts =
    pipewatch = pipewatch.cli:main

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov
    responses

[tool:pytest]
testpaths = pipewatch/tests
addopts = --tb=short -q

[flake8]
max-line-length = 100
exclude = .git,__pycache__,.venv
